--- a/pom.xml
+++ b/pom.xml
@@ -7,15 +7,15 @@
    <groupId>com.devops.cb</groupId>
    <artifactId>contbuild</artifactId>
    <version>1.0</version>
-   <build>
+  <!-- <build>
         <sourceDirectory>src</sourceDirectory>
-   </build>
+   </build> -->
 <dependencies>
 <dependency>
   <groupId>junit</groupId>
   <artifactId>junit</artifactId>
   <version>4.11</version>
-
+<scope>test</scope>
    
 </dependency>
 </dependencies>
