--- a/pom.xml
+++ b/pom.xml
@@ -7,9 +7,7 @@
    <groupId>com.devops.cb</groupId>
    <artifactId>contbuild</artifactId>
    <version>1.0</version>
-  <!-- <build>
-        <sourceDirectory>src</sourceDirectory>
-   </build> -->
+
 <dependencies>
 <dependency>
   <groupId>junit</groupId>
@@ -19,4 +17,7 @@
    
 </dependency>
 </dependencies>
+    <build>
+        <sourceDirectory>src</sourceDirectory>
+   </build> 
 </project>
