--- a/pom.xml
+++ b/pom.xml
@@ -9,13 +9,18 @@
    <version>1.0</version>
 
 <dependencies>
-<dependency>
-  <groupId>junit</groupId>
-  <artifactId>junit</artifactId>
-  <version>4.11</version>
-<scope>test</scope>
-   
-</dependency>
+   <dependency>
+     <groupId>junit</groupId>
+     <artifactId>junit</artifactId>
+     <version>4.11</version>
+      <scope>test</scope>
+      <exclusions>
+            <exclusion>
+               <groupId>org.hamcrest</groupId>
+               <artifactId>hamcrest-core</artifactId>
+            </exclusion>
+      </exclusions>
+   </dependency>
 </dependencies>
     <build>
         <sourceDirectory>src</sourceDirectory>
