--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,12 @@
             </exclusion>
       </exclusions>
    </dependency>
+   	<dependency>
+		<groupId>org.hamcrest</groupId>
+		<artifactId>hamcrest-library</artifactId>
+		<version>1.3</version>
+		<scope>test</scope>
+	</dependency>
 </dependencies>
     <build>
         <sourceDirectory>src</sourceDirectory>
