--- a/pom.xml
+++ b/pom.xml
@@ -3,31 +3,33 @@
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
    http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
-
    <groupId>com.devops.cb</groupId>
    <artifactId>contbuild</artifactId>
+   <packaging>jar</packaging>	
    <version>1.0</version>
 
-<dependencies>
-   <dependency>
-     <groupId>junit</groupId>
-     <artifactId>junit</artifactId>
-     <version>4.11</version>
-      <scope>test</scope>
-      <exclusions>
-            <exclusion>
-               <groupId>org.hamcrest</groupId>
-               <artifactId>hamcrest-core</artifactId>
-            </exclusion>
-      </exclusions>
-   </dependency>
-   	<dependency>
+   <dependencies>
+	<dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>4.11</version>
+		<scope>test</scope>
+		<exclusions>
+			<exclusion>
+				<groupId>org.hamcrest</groupId>
+				<artifactId>hamcrest-core</artifactId>
+			</exclusion>
+		</exclusions>
+	</dependency>
+	<!-- This will get hamcrest-core automatically -->
+	<dependency>
 		<groupId>org.hamcrest</groupId>
 		<artifactId>hamcrest-library</artifactId>
 		<version>1.3</version>
 		<scope>test</scope>
 	</dependency>
 </dependencies>
+
 <build>
 		<plugins>
 			<plugin>
@@ -51,5 +53,6 @@
 				</executions>
 			</plugin>
 		</plugins>
-	</build>
-</project>
+	</build>	
+	
+</project> 
