--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,11 @@
 		<scope>test</scope>
 	</dependency>
 </dependencies>
-
+ 
+<properties>
+       <java.version>1.8</java.version>
+</properties> 
+	
 <build>
 		<plugins>
 			<plugin>
